--- a/.github/workflows/build-and-push-prod.yml
+++ b/.github/workflows/build-and-push-prod.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-20.04
     environment: production
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
