--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   crapi-identity:
     container_name: crapi-identity
-    image: crapi/crapi-identity:${VERSION:-latest}
+    image: nnws/crapi-identity:${VERSION:-latest}
     #ports:
     #  - "127.0.0.1:8080:8080"
     environment:
@@ -55,7 +55,7 @@ services:
 
   crapi-community:
     container_name: crapi-community
-    image: crapi/crapi-community:${VERSION:-latest}
+    image: nnws/crapi-community:${VERSION:-latest}
     #ports:
     #  - "127.0.0.1:8087:8087"
     environment:
@@ -91,7 +91,7 @@ services:
 
   crapi-workshop:
     container_name: crapi-workshop
-    image: crapi/crapi-workshop:${VERSION:-latest}
+    image: nnws/crapi-workshop:${VERSION:-latest}
     #ports:
     #  - "127.0.0.1:8000:8000"
     environment:
@@ -130,7 +130,7 @@ services:
 
   crapi-web:
     container_name: crapi-web
-    image: crapi/crapi-web:${VERSION:-latest}
+    image: nnws/crapi-web:${VERSION:-latest}
     ports:
       - "127.0.0.1:8888:80"
     environment:
@@ -202,7 +202,7 @@ services:
   mailhog:
     user: root
     container_name: mailhog
-    image: crapi/mailhog:${VERSION:-latest}
+    image: nnws/mailhog:${VERSION:-latest}
     environment:
       MH_MONGO_URI: admin:crapisecretpassword@mongodb:27017
       MH_STORAGE: mongodb
