Update file path

--- a/.github/workflows/build-and-push-dev.yml
+++ b/.github/workflows/build-and-push-dev.yml
@@ -26,3 +26,4 @@ jobs:
           tags: ${{ secrets.DOCKER_REPO }}/crapi-community:${{ secrets.DOCKER_TAG }}
           platforms: linux/amd64,linux/arm
           context: ./services/community
+          file: ./services/community/Dockerfile
