--- a/.github/workflows/build-and-push-dev.yml
+++ b/.github/workflows/build-and-push-dev.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     environment: development
     steps:
+      - uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
