--- a/.github/workflows/build-and-push-dev.yml
+++ b/.github/workflows/build-and-push-dev.yml
@@ -28,12 +28,22 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKER_REPO }}/crapi-${{ matrix.image }}:${{ secrets.DOCKER_TAG }}
-          platforms: linux/arm,linux/amd64
+          platforms: linux/arm/8,linux/amd64
           context: ./services/${{ matrix.image }}
   build-and-publish-mailhog:
     runs-on: ubuntu-20.04
     environment: development
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Build and Publish Mailhog
         uses: docker/build-push-action@v6
         with:
