--- a/.github/workflows/build-and-push-dev.yml
+++ b/.github/workflows/build-and-push-dev.yml
@@ -11,7 +11,7 @@ jobs:
     environment: development
     strategy:
       matrix:
-        image: ['identity', 'community', 'web', 'workshop']
+        image: ['identity', 'community', 'web', 'workshop', 'mailhog']
     steps:
       - uses: actions/checkout@v3
       - name: Set up QEMU
